# llm_playground

./: .env.dev  .gitignore  docker-compose.yml  dynamic_injection_batch.py  init.sql  main.py  neo4j-init.cql  pyproject.toml  requirements.txt
data/: indexation-configuration.json
data/code-repository/: AllPrimeNumber.js  PrimeNumber.js
data/file-repository/: prime_numbers.txt
exemples/: code_graph_rag_exemple.txt
resources/chat_templates/: tool_use_chat_template.jinja
src/: api_models.py  chat_crud.py  code_parser_neo4j.py  data_injection_neo4j.py  dynamic_injection_bacth.py  llm_client.py  llm_loader.py  llm_model.py  postgresconnector.py  rag_tool.py  text_embedding.py  utils.py  utils_neo4j.py  webtool.py
